# sysrepo-viewer

./: .gitignore  README.md
backend/: app.py
backend/test/plugin/: CMakeLists.txt  sysrepo-viewer-plugin.c
backend/test/plugin/cmake/: FindLIBYANG.cmake  FindSYSREPO.cmake
backend/test/plugin/data/: edit.xml  import.xml
backend/test/plugin/yang/: sysrepo-viewer-example.yang
frontend/sysrepo-viewer/: package-lock.json  package.json
frontend/sysrepo-viewer/public/: index.html
frontend/sysrepo-viewer/src/: App.jsx  index.css
frontend/sysrepo-viewer/src/components/: PageBody.jsx  PageHeader.jsx
